samples/_failures_safe/1761306170_7a3b81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcf5b1fc.c: In function ‘main’:
./samples/SAFE/__tmp_dcf5b1fc.c:143:27: error: expected ‘)’ at end of input
  143 |     addEdge(graph, 1, 3, 7
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_dcf5b1fc.c:143:5: error: expected declaration or statement at end of input
  143 |     addEdge(graph, 1, 3, 7
      |     ^~~~~~~
